# CppAcademy

./: Daily_Report.odt  Integer.cpp  Integer.h  README.md  info.txt  main.cpp  main.py  tips.txt
Learning/CMake/module2/: CMakeLists.txt
Src/: CMakeCache.txt  CMakeLists.txt  CodeCoverage.cmake  Cpp_Component.cpp  Cpp_Component.gcda  Cpp_Component.gcno  Cpp_Component.hpp  Cpp_Component_Test.cpp  Cpp_Component_Test.gcda  Makefile  cmake_install.cmake  commands.txt  coverage.info  coverage_filtered.info  run.sh
Src/C_Component/Test/: C_Component_Test.cpp
Src/lco/: index-sort-f.html  index-sort-l.html  index.html
Src/lco/Src/: Cpp_Component.cpp.func-sort-c.html  Cpp_Component.cpp.func.html  Cpp_Component.cpp.gcov.html  Cpp_Component.hpp.func-sort-c.html  Cpp_Component.hpp.func.html  Cpp_Component.hpp.gcov.html  Cpp_Component_Test.cpp.func-sort-c.html  Cpp_Component_Test.cpp.func.html  Cpp_Component_Test.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
StrategyPattern/: CMakeLists.txt
TDD_Code/: Makefile  main.cpp
Type_deduction/: main.cpp
concurrency/: main.cpp
design-patterns/: main.cpp
effective_modern_c++_cheatsheet/: main.cpp
lambdas/: main.cpp
mmap_shared_memory/: main.cpp
mmap_testing/: client.cpp  server.cpp
move_and_forward/: main.cpp
multi_threading/: main  main.cpp
multiprocessing-shared-memory/: client  client.cpp  config.h  main.cpp  server  server.cpp  startApp.sh
multiprocessing-shared-memory-boost/: client.cpp  main.cpp  server.cpp
multiprocessing-sockets/: main.cpp  server.c
oop/: Account.h  CMakeLists.txt  Checking.cpp  Interfaces.h  PetrolCar.cpp  PetrolCar.h  Savings.cpp  Savings.h  Utils.h  main  main.cpp
oop/src/: main.cpp
oop/src/ElectricCar/: ElectricCar.cpp  ElectricCar.h
oop/src/HybridCar/: HybridCar.h
oop/src/PetrolCar/: PetrolCar.h
oop/src/Utils/: Utils.cpp
smart-pointers/: main.cpp
stl/: main  main.cpp
tasks/: Audi.cpp  Audi.h  Car.cpp  Car.h  HybridCar.h  Interfaces.h  Tesla.cpp  Tesla.h  Toyota.h  (+6 more)
(+48 files in other folders)
